Entrega da Atividade 3

--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana03/PWMA-Atividade3/login.html
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana03/PWMA-Atividade3/login.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
-  <header>
+  <div>
     <img src="./Imagens/lOGO TRAMPO.png" alt="logo-do-site" width="80px" height="90px" align=left>
     <h1>E&G Express</h1>
     <br>
     <br>
     <hr>
     <h2>Serviço de Entrega Personalizado</h2>
-    <nav>
+    <div>
       <ul>
         <!--adicionar ou remover elementos-->
         <li><a href="./index.html">Início</a></li>
@@ -25,42 +25,29 @@
         <li><a href="./index.html#contato">Contato</a></li>
       </ul>
       <hr>
-    </nav>
-  </header>
+    </div>
+  </div>
 
-  <section class="Primeira secao login" id="cadastro">
-    <h2 align="center">Trabalhe Conosco</h2>
-        <p align="center">Venha participar do mais novo sistema de entregas nacional !</p>
-
-        <h3 align="center">Cadastro</h3>
-    <form align="center">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required>
-        <br>
-
-        <label for="sobrenome">Sobrenome:</label>
-        <input type="text" id="sobrenome" name="sobrenome" required>
-        <br>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <br>
-
-        <label for="senha">Senha:</label>
-        <input type="password" id="senha" name="senha" required>
-        <br>
-
-        <label for="dataNascimento">Data de Nascimento:</label>
-        <input type="date" id="nascimento" name="nascimento" required></textarea>
-        <br>
-        <br>
-        <button type="submit" >Enviar</button>
-        <br>
-        <br>
-      </form>
+  <div id="cadastro" align="center">
+    <h2>Trabalhe Conosco</h2>
+        <p>Venha participar do mais novo sistema de entregas nacional !</p>
+        <!--adicionar Formulario-->
+          <h2>Atendimento ao Cliente</h2>
+            <p><b>Nome:</b></p>
+            <br>
+            <p><b>Sobrenome:</b></p>
+            <br>
+            <p><b>Email:</b></p>
+            <br>
+            <p><b>Senha:</b></p>
+            <br>
+            <p><b>Data de nascimento:</b></p>
+            <br>
+            <h3><a href="#">Enviar</a></h3>
+        </div>
 
     <hr>
-    <div class="Segunda secao login" id="parcerias">
+    <div id="parcerias">
       <h2>Outras parcerias</h2>
       <!--Parcerias ficticias-->
       <ol>
@@ -73,14 +60,14 @@
         Na E&G Express, entregamos mais do que pacotes - entregamos satisfação aos nossos clientes todos os dias.</p>
     </div>
     <hr>
-  </section>
+  </div>
 
-  <footer class="Rodapé login" id="Contatos login">
+  <div id="Contatos login">
     <h1>Redes Sociais</h1>
         <li><a href="#">Facebook</a></li>
         <li><a href="#">Instagram</a></li>
         <li><a href="#">Twitter</a></li>
     <p>&copy; 2023 E&G Express. Todos os direitos reservados.</p>
-  </footer>
+  </div>
 </body>
 </html>
