--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana03/PWMA-Atividade3/Index.html
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana03/PWMA-Atividade3/Index.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
-  <header>
+  <div>
     <img src="./Imagens/lOGO TRAMPO.png" alt="logo-do-site" width="80px" height="90px" align=left>
     <h1>E&G Express</h1>
     <br>
     <br>
     <hr>
     <h2>Serviço de Entrega Personalizado</h2>
-    <nav>
+    <div>
       <ul>
         <!--adicionar ou remover elementos-->
         <li><a href="./index.html">Início</a></li>
@@ -25,27 +25,26 @@
         <li><a href="#contato">Contato</a></li>
       </ul>
       <hr>
-    </nav>
-  </header>
+    </div>
+  </div>
 
-  <section class="Primeira secao" id="rastrear">
+  <div id="rastrear">
     <h2>Rastreio</h2>
-    <form class="rastreio">
-      <label for="id_rastreio">Número de Rastreio</label>
-      <input type="number" required>
 
-      <button type="submit">Buscar</button>
-    </form>
+    <p><b>Número de rastreio:</b>&nbsp &nbsp &nbsp &nbsp &nbsp<b><a href="#">Buscar</a></b></p>
     <hr>
-    <div class="Segunda secao" id="avaliacoes">
+    <div id="avaliacoes">
       <h2>Avalições de Usuários</h2>
       <!--preencher futuramente-->
-      <button>Enviar Avaliação</button>
+      <br>
+      <br>
+      <br>
+      <h3><a href="#">Enviar Avaliação</a></h3>
     </div>
     <hr>
-  </section>
+  </div>
 
-  <section class="Terceira secao" id="sobre">
+  <div id="sobre">
     <h2>Sobre Nós</h2>
     <p>Nós da E&G Express somos a sua empresa de Gestão de logística e entregas comprometida em fornecer soluções
       eficientes e inovadoras para nossos clientes. Presamos pela eficiência, planejamento e execução de todos os
@@ -56,30 +55,26 @@
 
       <h3><a href="./login.html">Trabalhe conosco</a></h3>
     <hr>
-  </section>
+    </div>
 
-  <section class="Quarta secao" id="contato">
+  <div id="contato">
     <h2>Atendimento ao Cliente</h2>
-    <form>
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" name="nome" required>
+      <p><b>Nome:</b></p>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+      <p><b>Email:</b></p>
 
-      <label for="mensagem">Mensagem:</label>
-      <textarea id="mensagem" name="mensagem" required></textarea>
+      <p><b>Mensagem:</b></p>
 
-      <button type="submit">Enviar</button>
-    </form>
-  </section>
+      <h3><a href="#">Enviar</a></h3>
+  </div>
+  <hr>
   <!--Mickey Mouse was hereKKKKKKKKKKKKKKKKKKKKKK-->
-  <footer class="Rodapé" id="Contatos">
+  <div id="Contatos">
     <h1>Redes Sociais</h1>
         <li><a href="#">Facebook</a></li>
         <li><a href="#">Instagram</a></li>
         <li><a href="#">Twitter</a></li>
     <p>&copy; 2023 E&G Express. Todos os direitos reservados.</p>
-  </footer>
+  </div>
 </body>
 </html>
