Entrega da Atividade 4

--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana04/PWMA-Atividade4/login.html
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana04/PWMA-Atividade4/login.html
@@ -28,12 +28,12 @@
     </nav>
   </header>
 
-  <section class="Primeira secao login" id="cadastro">
-    <h2 align="center">Trabalhe Conosco</h2>
-        <p align="center">Venha participar do mais novo sistema de entregas nacional !</p>
+  <section class="Primeira secao login" id="cadastro" align="center">
+    <h2>Trabalhe Conosco</h2>
+        <p>Venha participar do mais novo sistema de entregas nacional !</p>
 
-        <h3 align="center">Cadastro</h3>
-    <form align="center">
+        <h3>Cadastro</h3>
+    <form>
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" required>
         <br>
@@ -58,6 +58,7 @@
         <br>
         <br>
       </form>
+  </section>
 
     <hr>
     <div class="Segunda secao login" id="parcerias">
