--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana04/PWMA-Atividade4/Index.html
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana04/PWMA-Atividade4/Index.html
@@ -31,7 +31,7 @@
   <section class="Primeira secao" id="rastrear">
     <h2>Rastreio</h2>
     <form class="rastreio">
-      <label for="id_rastreio">Número de Rastreio</label>
+      <label for="id_rastreio">Número de Rastreio:</label>
       <input type="number" required>
 
       <button type="submit">Buscar</button>
@@ -63,13 +63,16 @@
     <form>
       <label for="nome">Nome:</label>
       <input type="text" id="nome" name="nome" required>
-
+      <br>
+      <br>
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required>
-
+      <br>
+      <br>
       <label for="mensagem">Mensagem:</label>
       <textarea id="mensagem" name="mensagem" required></textarea>
-
+      <br>
+      <br>
       <button type="submit">Enviar</button>
     </form>
   </section>
