--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/login.html
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/login.html
@@ -4,29 +4,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/componentes/header.css">
+  <link rel="stylesheet" href="./css/componentes/body.css">
+  <link rel="stylesheet" href="./css/componentes/texts.css">
+  <link rel="stylesheet" href="./css/componentes/buttons.css">
+  <link rel="stylesheet" href="./css/componentes/sections.css">
+  <link rel="stylesheet" href="./css/reset.css">
   <title>E&G Express</title>
 </head>
 
 <body>
   <header>
-    <img src="./Imagens/lOGO TRAMPO.png" alt="logo-do-site" width="80px" height="90px" align=left>
-    <h1>E&G Express</h1>
-    <br>
-    <br>
-    <hr>
-    <h2>Serviço de Entrega Personalizado</h2>
-    <nav>
-      <ul>
-        <!--adicionar ou remover elementos-->
-        <li><a href="./index.html">Início</a></li>
-        <li><a href="./index.html#rastrear">Rastreio</a></li>
-        <li><a href="./index.html#avaliacoes">Avaliações</a></li>
-        <li><a href="./index.html#sobre">Sobre Nós</a></li>
-        <li><a href="./index.html#contato">Contato</a></li>
-      </ul>
-      <hr>
-    </nav>
-  </header>
+    <div id="page">
+      <header class="header">
+        <div class="boxHeader" id="caixaLogo">
+            <img class="logo" src="./imagens/lOGO TRAMPO (1)_clipdrop-background-removal.png" alt="logo-do-site">
+            <h1 class="tituloPrincipal -header">E&G Express</h1>
+        </div>
+    
+        <div class="boxHeader" id="Caixa nav">
+        <nav class="navigation">
+            <a class="links" href="./index.html">Início</a>
+            <a class="links" href="#rastrear">Rastreio</a>
+            <a class="links" href="#avaliacoes">Avaliações</a>
+            <a class="links" href="#sobre">Sobre Nós</a>
+            <a class="links" href="#contato">Contato</a>
+          </nav>
+        </div>
+      </header>
 
   <section class="Primeira secao login" id="cadastro" align="center">
     <h2>Trabalhe Conosco</h2>
