--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/Index.html
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/Index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./css/componentes/texts.css">
   <link rel="stylesheet" href="./css/componentes/buttons.css">
   <link rel="stylesheet" href="./css/componentes/sections.css">
+  <link rel="stylesheet" href="./css/componentes/footer.css">
   <link rel="stylesheet" href="./css/reset.css">
   <title>E&G Express</title>
 </head>
@@ -18,7 +19,7 @@
   <header class="header">
     <div class="boxHeader" id="caixaLogo">
         <img class="logo" src="./imagens/lOGO TRAMPO (1)_clipdrop-background-removal.png" alt="logo-do-site">
-        <h1 class="tituloPrincipal">E&G Express</h1>
+        <h1 class="tituloPrincipal"><a class="link-logo" href="./Index.html">E&G Express</a></h1>
     </div>
 
     <div class="boxHeader" id="Caixa nav">
@@ -54,7 +55,7 @@
 
     <section class="secao" id="segundaSecao">
       <h2 class="subtitulo">Avaliações de Usuários</h2>
-      <div class="teste">
+      <div class="boxWrap">
       <div class="boxBody">
         <div class="boxAv">
         <img class="avaliacao" src="./imagens/av1.png" alt="logo-do-site">
@@ -71,7 +72,7 @@
 
       <div class="boxSection">
         <h2>Levando sempre o feedback em consideração</h2>
-        <p>Na E&G Express sua opinião vem em primeiro lugar</p>
+        <p>Na E&G Express sua opinião vem em primeiro lugar !</p>
         <img class="assets" src="./imagens/assets.png" alt="Avalie-nos">
       </div>
     </div>
@@ -110,12 +111,57 @@
     </form>
   </section>
   <!--Mickey Mouse was hereKKKKKKKKKKKKKKKKKKKKKK-->
-  <footer class="Rodapé" id="Contatos">
-    <h1>Redes Sociais</h1>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">Twitter</a></li>
-    <p>&copy; 2023 E&G Express. Todos os direitos reservados.</p>
+  <footer class="footer">
+    <div class="boxFooter" id="InformacoesEmpresa">
+      <div class="boxFooter" id="boxLogoFooter">
+        <img class="logo" src="./imagens/lOGO TRAMPO (1)_clipdrop-background-removal.png" alt="logo-do-site">
+        <h1 class="tituloPrincipal"><a class="link-logo" href="./Index.html">E&G Express</a></h1>
+      </div>
+
+      <div class="boxFooter" id="Copyright">
+        <p>© 2023 E&G Express.</p>
+        <p>Todos os direitos reservados.</p>
+      </div>
+    
+      <div class="boxFooter" id="RedesSociais">
+        <img class="socialMedias" src="./imagens/Style=Gray, Social=Instagram.png" alt="Instagram">
+        <img class="socialMedias" src="./imagens/Style=Gray, Social=Facebook.png" alt="Facebook">
+        <img class="socialMedias" src="./imagens/Style=Gray, Social=LinkedIn.png" alt="LinkedIn">
+      </div>
+    </div>
+
+    <div class="boxFooter" id="Servicos">
+      <div class="boxFooter" id="coluna1">
+        <h3>Serviços</h3>
+        <div class="boxFooter" id="lista1">
+          <a class="linksFooter" href="#">Parcerias</a>
+          <a class="linksFooter" href="#">Usuário</a>
+          <a class="linksFooter" href="#">Motoristas</a>
+          <a class="linksFooter" href="#">Preços</a>
+        </div>
+      </div>
+
+      <div class="boxFooter" id="coluna2">
+          <h3>Suporte</h3>
+          <div class="boxFooter" id="lista2">
+            <a class="linksFooter" href="#">Sobre nós</a>
+            <a class="linksFooter" href="#">Política de privacidade</a>
+            <a class="linksFooter" href="#">Motoristas</a>
+            <a class="linksFooter" href="#">Termos e condições</a>
+          </div>
+        </div>
+        </div>
+
+    <div class="boxFooter" id="Idioma">
+        <div class="boxFooter" id="coluna3">
+          <h3>Idioma</h3>
+          <div class="boxFooter" id="lista3">
+            <img src="./imagens/style=outline.png" alt="Idioma:">
+            <h2 class="linksFooter">Brasil - Português</h2>
+          </div>
+        </div>
+      </div>
+    
   </footer>
 </div>
 </body>
