--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/Index.html
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/Index.html
@@ -27,14 +27,14 @@
         <a class="links" href="./index.html">Início</a>
         <a class="links" href="#rastrear">Rastreio</a>
         <a class="links" href="#avaliacoes">Avaliações</a>
-        <a class="links" href="#sobre">Sobre Nós</a>
-        <a class="links" href="#contato">Contato</a>
+        <a class="links" href="./about.html">Sobre Nós</a>
+        <a class="links" href="./help.html">Contato</a>
       </nav>
     </div>
 
         <div class="boxLogin">
             <a class="button" id="buttonLog" href="./login.html">Login</a>
-            <a class="button" id="buttonCad" href="./login.html">Cadastro</a>
+            <a class="button" id="buttonCad" href="./cad.html">Cadastro</a>
 
         </div>
   </header>
@@ -80,36 +80,27 @@
     </section>
 
   <section class="secao" id="TerceiraSecao">
-    <h2>Sobre Nós</h2>
-    <p>Nós da E&G Express somos a sua empresa de Gestão de logística e entregas comprometida em fornecer soluções
-      eficientes e inovadoras para nossos clientes. Presamos pela eficiência, planejamento e execução de todos os
-      processos desde o fornecedor até o cliente final. Focamos sempre na satisfação do cliente e na praticidade
-      operacional. Trabalhamos em colaboração com diversas indústrias e estamos sempre abertos à novas parcerias
-      assegurando suavidade, economia e sustentabilidade para operações logísticas e para um serviço de entrega rápido e
-      confiável.</p>
+    <h2>Iniciando na carreira de Gestão de Entregas ?</h2>
+    <div class="boxWrap">
+      <div class="boxBody">
+        <img class="assets" id="imgCaminhao" src="./imagens/Truck symbol.png">
+      </div>
 
-      <h3><a href="./login.html">Trabalhe conosco</a></h3>
-    <hr>
+      <div class="boxBody">
+        <h2>A E&G Express oferece a seus colaboradores:</h2>
+        <ul class="requisitos">
+          <li>Oportunidade de crescimento profissional em um ambiente dinâmico e desafiador.</li>
+          <li>Equipe dedicada e experiente que valoriza o trabalho em equipe.</li>
+          <li>Treinamento contínuo para desenvolver suas habilidades e conhecimentos.</li>
+          <li>Uma cultura corporativa que valoriza a inovação e a excelência.</li>
+        </ul>
+        <h2>Interessado ?</h2>
+        <a class="button" href="./cad.html">Cadastre-se</a>
+      </div>
+
+    </div>
   </section>
 
-  <section class="secao" id="QuartaSecao">
-    <h2>Atendimento ao Cliente</h2>
-    <form>
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" name="nome" required>
-      <br>
-      <br>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-      <br>
-      <br>
-      <label for="mensagem">Mensagem:</label>
-      <textarea id="mensagem" name="mensagem" required></textarea>
-      <br>
-      <br>
-      <button type="submit">Enviar</button>
-    </form>
-  </section>
   <!--Mickey Mouse was hereKKKKKKKKKKKKKKKKKKKKKK-->
   <footer class="footer">
     <div class="boxFooter" id="InformacoesEmpresa">
@@ -145,8 +136,8 @@
           <h3>Suporte</h3>
           <div class="boxFooter" id="lista2">
             <a class="linksFooter" href="#">Sobre nós</a>
+            <a class="linksFooter" href="#">Contate-nos</a>
             <a class="linksFooter" href="#">Política de privacidade</a>
-            <a class="linksFooter" href="#">Motoristas</a>
             <a class="linksFooter" href="#">Termos e condições</a>
           </div>
         </div>
