--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/cad.html
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/cad.html
@@ -53,60 +53,58 @@
   </div>
 </section>
 
-  <section class="Primeira secao login" id="cadastro" align="center">
-    <h2>Trabalhe Conosco</h2>
-        <p>Venha participar do mais novo sistema de entregas nacional !</p>
+<footer class="footer">
+    <div class="boxFooter" id="InformacoesEmpresa">
+      <div class="boxFooter" id="boxLogoFooter">
+        <img class="logo" src="./imagens/lOGO TRAMPO (1)_clipdrop-background-removal.png" alt="logo-do-site">
+        <h1 class="tituloPrincipal"><a class="link-logo" href="./Index.html">E&G Express</a></h1>
+      </div>
 
-        <h3>Cadastro</h3>
-    <form>
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required>
-        <br>
-
-        <label for="sobrenome">Sobrenome:</label>
-        <input type="text" id="sobrenome" name="sobrenome" required>
-        <br>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <br>
-
-        <label for="senha">Senha:</label>
-        <input type="password" id="senha" name="senha" required>
-        <br>
-
-        <label for="dataNascimento">Data de Nascimento:</label>
-        <input type="date" id="nascimento" name="nascimento" required></textarea>
-        <br>
-        <br>
-        <button type="submit" >Enviar</button>
-        <br>
-        <br>
-      </form>
-  </section>
-
-    <hr>
-    <div class="Segunda secao login" id="parcerias">
-      <h2>Outras parcerias</h2>
-      <!--Parcerias ficticias-->
-      <ol>
-        <li>Canes Solution</li>
-        <li>Dalva Enterprise</li>
-        <li>Soul Society</li>
-      </ol>
-
-      <p>Seja bem-vindo(a) à mais nova equipe dinâmica que busca expandir seu ramo na logística de entregas eficientes. 
-        Na E&G Express, entregamos mais do que pacotes - entregamos satisfação aos nossos clientes todos os dias.</p>
+      <div class="boxFooter" id="Copyright">
+        <p>© 2023 E&G Express.</p>
+        <p>Todos os direitos reservados.</p>
+      </div>
+    
+      <div class="boxFooter" id="RedesSociais">
+        <img class="socialMedias" src="./imagens/Style=Gray, Social=Instagram.png" alt="Instagram">
+        <img class="socialMedias" src="./imagens/Style=Gray, Social=Facebook.png" alt="Facebook">
+        <img class="socialMedias" src="./imagens/Style=Gray, Social=LinkedIn.png" alt="LinkedIn">
+      </div>
     </div>
-    <hr>
-  </section>
 
-  <footer class="Rodapé login" id="Contatos login">
-    <h1>Redes Sociais</h1>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">Twitter</a></li>
-    <p>&copy; 2023 E&G Express. Todos os direitos reservados.</p>
+    <div class="boxFooter" id="Servicos">
+      <div class="boxFooter" id="coluna1">
+        <h3>Serviços</h3>
+        <div class="boxFooter" id="lista1">
+          <a class="linksFooter" href="#">Parcerias</a>
+          <a class="linksFooter" href="#">Usuário</a>
+          <a class="linksFooter" href="#">Motoristas</a>
+          <a class="linksFooter" href="#">Preços</a>
+        </div>
+      </div>
+
+      <div class="boxFooter" id="coluna2">
+          <h3>Suporte</h3>
+          <div class="boxFooter" id="lista2">
+            <a class="linksFooter" href="#">Sobre nós</a>
+            <a class="linksFooter" href="#">Contate-nos</a>
+            <a class="linksFooter" href="#">Política de privacidade</a>
+            <a class="linksFooter" href="#">Termos e condições</a>
+          </div>
+        </div>
+        </div>
+
+    <div class="boxFooter" id="Idioma">
+        <div class="boxFooter" id="coluna3">
+          <h3>Idioma</h3>
+          <div class="boxFooter" id="lista3">
+            <img src="./imagens/style=outline.png" alt="Idioma:">
+            <h2 class="linksFooter">Brasil - Português</h2>
+          </div>
+        </div>
+      </div>
+    
   </footer>
+</div>
 </body>
 </html>
