Entrega da Atividade 5

--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/help.html
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/help.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/componentes/header.css">
+  <link rel="stylesheet" href="./css/componentes/boxes.css">
+  <link rel="stylesheet" href="./css/componentes/assets.css">
   <link rel="stylesheet" href="./css/componentes/body.css">
   <link rel="stylesheet" href="./css/componentes/texts.css">
   <link rel="stylesheet" href="./css/componentes/buttons.css">
@@ -16,44 +18,61 @@
 
 <body>
   <div id="page">
-  <header class="header">
-    <div class="boxHeader" id="caixaLogo">
+    <header class="header">
+      <div class="boxHeader" id="caixaLogo">
         <img class="logo" src="./imagens/lOGO TRAMPO (1)_clipdrop-background-removal.png" alt="logo-do-site">
         <h1 class="tituloPrincipal"><a class="link-logo" href="./Index.html">E&G Express</a></h1>
-    </div>
+      </div>
 
-    <div class="boxHeader" id="Caixa nav">
-    <nav class="navigation">
-        <a class="links" href="./index.html">Início</a>
-        <a class="links" href="#rastrear">Rastreio</a>
-        <a class="links" href="#avaliacoes">Avaliações</a>
-        <a class="links" href="#sobre">Sobre Nós</a>
-        <a class="links" href="#contato">Contato</a>
-      </nav>
-    </div>
+      <div class="boxHeader" id="Caixa nav">
+        <nav class="navigation">
+          <a class="links" href="./index.html">Início</a>
+          <a class="links" href="./Index.html#primeiraSecao">Rastreio</a>
+          <a class="links" href="./Index.html#segundaSecao">Avaliações</a>
+          <a class="links" href="./about.html">Sobre Nós</a>
+          <a class="links" href="./help.html">Contato</a>
+        </nav>
+      </div>
 
-        <div class="boxLogin">
-            <a class="button" id="buttonLog" href="./login.html">Login</a>
-            <a class="button" id="buttonCad" href="./login.html">Cadastro</a>
+      <div class="boxLogin">
+        <a class="button" id="buttonLog" href="./login.html">Login</a>
+        <a class="button" id="buttonCad" href="./cad.html">Cadastro</a>
+      </div>
+    </header>
+
+    <section class="secao" id="primeiraSecaoHelp">
+      <div class="secaoTitulo" id="logSection1">
+        <h1 class="tituloSecundario">Em que podemos ajudar ?</h2>
+      </div>
+
+      <div class="boxBody" id="boxCad">
+        <h3>Contato</h3>
+        <p>Envie suas dúvidas</p>
+        <div class="boxColuna" id="colunaCad">
+
+          <form>
+            <div class="boxLista">
+
+              <label for="nome">Nome:</label>
+              <input type="text" id="nome" name="nome" required>
+
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" required>
+
+              <label for="mensagem">Mensagem:</label>
+              <textarea id="mensagem" name="mensagem" required></textarea>
+
+              <button type="submit">Enviar</button>
+          </form>
 
         </div>
-  </header>
-
-  <section class="secao" id="primeiraSecao">
-    <div class="boxBody">
-    <h1 class="tituloPrincipal">Serviço de Entrega Personalizado<br> Entregando satisfação e praticidade</h1>
-    <form class="rastreio">
-      <label for="id_rastreio">Número de Rastreio:</label>
-      <input type="number" required>
-      <button type="submit">Buscar</button>
-    </form>
+        </form>
+      </div>
   </div>
-  <div>
-    <img class="assets" src="./imagens/lOGO TRAMPO (3)_clipdrop-background-removal.png" alt="Laptop">
-  </div>
-</section>
+  </section>
 
-<footer class="footer">
+  <!--Mickey Mouse was hereKKKKKKKKKKKKKKKKKKKKKK-->
+  <footer class="footer">
     <div class="boxFooter" id="InformacoesEmpresa">
       <div class="boxFooter" id="boxLogoFooter">
         <img class="logo" src="./imagens/lOGO TRAMPO (1)_clipdrop-background-removal.png" alt="logo-do-site">
@@ -64,7 +83,7 @@
         <p>© 2023 E&G Express.</p>
         <p>Todos os direitos reservados.</p>
       </div>
-    
+
       <div class="boxFooter" id="RedesSociais">
         <img class="socialMedias" src="./imagens/Style=Gray, Social=Instagram.png" alt="Instagram">
         <img class="socialMedias" src="./imagens/Style=Gray, Social=Facebook.png" alt="Facebook">
@@ -73,38 +92,39 @@
     </div>
 
     <div class="boxFooter" id="Servicos">
-      <div class="boxFooter" id="coluna1">
+      <div class="boxColuna" id="coluna1">
         <h3>Serviços</h3>
-        <div class="boxFooter" id="lista1">
+        <div class="boxLista" id="lista1">
           <a class="linksFooter" href="#">Parcerias</a>
-          <a class="linksFooter" href="#">Usuário</a>
-          <a class="linksFooter" href="#">Motoristas</a>
+          <a class="linksFooter" href="./login.html">Usuário</a>
+          <a class="linksFooter" href="./login.html">Motoristas</a>
           <a class="linksFooter" href="#">Preços</a>
         </div>
       </div>
 
-      <div class="boxFooter" id="coluna2">
-          <h3>Suporte</h3>
-          <div class="boxFooter" id="lista2">
-            <a class="linksFooter" href="#">Sobre nós</a>
-            <a class="linksFooter" href="#">Contate-nos</a>
-            <a class="linksFooter" href="#">Política de privacidade</a>
-            <a class="linksFooter" href="#">Termos e condições</a>
-          </div>
-        </div>
-        </div>
-
-    <div class="boxFooter" id="Idioma">
-        <div class="boxFooter" id="coluna3">
-          <h3>Idioma</h3>
-          <div class="boxFooter" id="lista3">
-            <img src="./imagens/style=outline.png" alt="Idioma:">
-            <h2 class="linksFooter">Brasil - Português</h2>
-          </div>
+      <div class="boxColuna" id="coluna2">
+        <h3>Suporte</h3>
+        <div class="boxLista" id="lista2">
+          <a class="linksFooter" href="./about.html">Sobre nós</a>
+          <a class="linksFooter" href="./help.html">Contate-nos</a>
+          <a class="linksFooter" href="#">Política de privacidade</a>
+          <a class="linksFooter" href="#">Termos e condições</a>
         </div>
       </div>
-    
+    </div>
+
+    <div class="boxFooter" id="Idioma">
+      <div class="boxColuna" id="coluna3">
+        <h3>Idioma</h3>
+        <div class="boxLista" id="lista3">
+          <img src="./imagens/style=outline.png" alt="Idioma:">
+          <h2 class="linksFooter">Brasil - Português</h2>
+        </div>
+      </div>
+    </div>
+
   </footer>
-</div>
+  </div>
 </body>
+
 </html>
