--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/login.html
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/login.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/componentes/header.css">
+  <link rel="stylesheet" href="./css/componentes/boxes.css">
+  <link rel="stylesheet" href="./css/componentes/assets.css">
   <link rel="stylesheet" href="./css/componentes/body.css">
   <link rel="stylesheet" href="./css/componentes/texts.css">
   <link rel="stylesheet" href="./css/componentes/buttons.css">
@@ -16,97 +18,110 @@
 
 <body>
   <div id="page">
-  <header class="header">
-    <div class="boxHeader" id="caixaLogo">
+    <header class="header">
+      <div class="boxHeader" id="caixaLogo">
         <img class="logo" src="./imagens/lOGO TRAMPO (1)_clipdrop-background-removal.png" alt="logo-do-site">
         <h1 class="tituloPrincipal"><a class="link-logo" href="./Index.html">E&G Express</a></h1>
-    </div>
+      </div>
 
-    <div class="boxHeader" id="Caixa nav">
-    <nav class="navigation">
-        <a class="links" href="./index.html">Início</a>
-        <a class="links" href="#rastrear">Rastreio</a>
-        <a class="links" href="#avaliacoes">Avaliações</a>
-        <a class="links" href="#sobre">Sobre Nós</a>
-        <a class="links" href="#contato">Contato</a>
-      </nav>
-    </div>
+      <div class="boxHeader" id="Caixa nav">
+        <nav class="navigation">
+          <a class="links" href="./index.html">Início</a>
+          <a class="links" href="./index.html#primeiraSecao">Rastreio</a>
+          <a class="links" href="./index.html#segundaSecao">Avaliações</a>
+          <a class="links" href="./about.html">Sobre Nós</a>
+          <a class="links" href="./help.html">Contato</a>
+        </nav>
+      </div>
+    </header>
 
-        <div class="boxLogin">
-            <a class="button" id="buttonLog" href="./login.html">Login</a>
-            <a class="button" id="buttonCad" href="./login.html">Cadastro</a>
+    <section class="secao" id="primeiraSecaoLog">
+      <div class="secaoTitulo" id="logSection1">
+        <h1 class="tituloSecundario">Trabalhe Conosco</h2>
+      </div>
 
+      <div class="boxBody" id="boxCad">
+        <h3>Login</h3>
+        <p>Seja bem-vindo(a) de volta</p>
+        <div class="boxColuna" id="colunaCad">
+
+          <form>
+            <div class="boxLista">
+
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" required>
+
+
+
+              <label for="senha">Senha:</label>
+              <input type="password" id="senha" name="senha" required>
+
+
+
+              <button type="submit">Enviar</button>
+
+              <p>Não tem uma conta? Cadastre-se por <a class="links" href="./cad.html">aqui</a></p>
+
+            </div>
+          </form>
         </div>
-  </header>
+      </div>
+    </section>
 
-  <section class="secao" id="primeiraSecao">
-    <div class="boxBody">
-    <h1 class="tituloPrincipal">Serviço de Entrega Personalizado<br> Entregando satisfação e praticidade</h1>
-    <form class="rastreio">
-      <label for="id_rastreio">Número de Rastreio:</label>
-      <input type="number" required>
-      <button type="submit">Buscar</button>
-    </form>
+    <!--Mickey Mouse was hereKKKKKKKKKKKKKKKKKKKKKK-->
+    <footer class="footer">
+      <div class="boxFooter" id="InformacoesEmpresa">
+        <div class="boxFooter" id="boxLogoFooter">
+          <img class="logo" src="./imagens/lOGO TRAMPO (1)_clipdrop-background-removal.png" alt="logo-do-site">
+          <h1 class="tituloPrincipal"><a class="link-logo" href="./Index.html">E&G Express</a></h1>
+        </div>
+
+        <div class="boxFooter" id="Copyright">
+          <p>© 2023 E&G Express.</p>
+          <p>Todos os direitos reservados.</p>
+        </div>
+
+        <div class="boxFooter" id="RedesSociais">
+          <img class="socialMedias" src="./imagens/Style=Gray, Social=Instagram.png" alt="Instagram">
+          <img class="socialMedias" src="./imagens/Style=Gray, Social=Facebook.png" alt="Facebook">
+          <img class="socialMedias" src="./imagens/Style=Gray, Social=LinkedIn.png" alt="LinkedIn">
+        </div>
+      </div>
+
+      <div class="boxFooter" id="Servicos">
+        <div class="boxColuna" id="coluna1">
+          <h3>Serviços</h3>
+          <div class="boxLista" id="lista1">
+            <a class="linksFooter" href="#">Parcerias</a>
+            <a class="linksFooter" href="./login.html">Usuário</a>
+            <a class="linksFooter" href="./login.html">Motoristas</a>
+            <a class="linksFooter" href="#">Preços</a>
+          </div>
+        </div>
+
+        <div class="boxColuna" id="coluna2">
+          <h3>Suporte</h3>
+          <div class="boxLista" id="lista2">
+            <a class="linksFooter" href="./about.html">Sobre nós</a>
+            <a class="linksFooter" href="./help.html">Contate-nos</a>
+            <a class="linksFooter" href="#">Política de privacidade</a>
+            <a class="linksFooter" href="#">Termos e condições</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="boxFooter" id="Idioma">
+        <div class="boxColuna" id="coluna3">
+          <h3>Idioma</h3>
+          <div class="boxLista" id="lista3">
+            <img src="./imagens/style=outline.png" alt="Idioma:">
+            <h2 class="linksFooter">Brasil - Português</h2>
+          </div>
+        </div>
+      </div>
+
+    </footer>
   </div>
-  <div>
-    <img class="assets" src="./imagens/lOGO TRAMPO (3)_clipdrop-background-removal.png" alt="Laptop">
-  </div>
-</section>
-
-  <section class="Primeira secao login" id="cadastro" align="center">
-    <h2>Trabalhe Conosco</h2>
-        <p>Venha participar do mais novo sistema de entregas nacional !</p>
-
-        <h3>Cadastro</h3>
-    <form>
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required>
-        <br>
-
-        <label for="sobrenome">Sobrenome:</label>
-        <input type="text" id="sobrenome" name="sobrenome" required>
-        <br>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <br>
-
-        <label for="senha">Senha:</label>
-        <input type="password" id="senha" name="senha" required>
-        <br>
-
-        <label for="dataNascimento">Data de Nascimento:</label>
-        <input type="date" id="nascimento" name="nascimento" required></textarea>
-        <br>
-        <br>
-        <button type="submit" >Enviar</button>
-        <br>
-        <br>
-      </form>
-  </section>
-
-    <hr>
-    <div class="Segunda secao login" id="parcerias">
-      <h2>Outras parcerias</h2>
-      <!--Parcerias ficticias-->
-      <ol>
-        <li>Canes Solution</li>
-        <li>Dalva Enterprise</li>
-        <li>Soul Society</li>
-      </ol>
-
-      <p>Seja bem-vindo(a) à mais nova equipe dinâmica que busca expandir seu ramo na logística de entregas eficientes. 
-        Na E&G Express, entregamos mais do que pacotes - entregamos satisfação aos nossos clientes todos os dias.</p>
-    </div>
-    <hr>
-  </section>
-
-  <footer class="Rodapé login" id="Contatos login">
-    <h1>Redes Sociais</h1>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">Twitter</a></li>
-    <p>&copy; 2023 E&G Express. Todos os direitos reservados.</p>
-  </footer>
 </body>
+
 </html>
